Fixed alignment issues for claim summary box

--- a/src/sass/myservice-utilities.scss
+++ b/src/sass/myservice-utilities.scss
@@ -151,7 +151,7 @@
   display: block; // for IE 9
   display: flex;
   justify-content: center;
-  text-align: center;
+  // text-align: center;
   margin: 1.5em auto;
   overflow: hidden;
   padding: 0;
